# Quantization

./: .gitignore  LICENSE  README.md  dump_params.py  norm_data.txt  output_quantized_resnet50.txt  quantization.py  qvgg16.py  sort_val.py  utils.py
c_plus_plus_example/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  test_model  test_model.cpp  utils.cpp  utils.h
cpptorch/: CMakeLists.txt  README.md  dataset.cpp  dataset.h  test_model.cpp  utils.cpp  utils.h
cpptorch/result/origin_result/: mobilenet_v2_result.txt  resnet50_result.txt  vgg16_result.txt
output/: output_quantized_mobilenet_v2.txt  output_quantized_vgg16.txt  params_quantized_resnet50.txt  params_quantized_vgg16.txt
output/model structures/: vgg16.txt
output/params/mobilenet_v2/features_0_0/: weight_32_27.txt
output/params/mobilenet_v2/features_10_conv_0_0/: weight_384_64.txt
output/params/mobilenet_v2/features_10_conv_1_0/: weight_384_9.txt
output/params/mobilenet_v2/features_10_conv_2/: weight_64_384.txt
output/params/mobilenet_v2/features_11_conv_0_0/: weight_384_64.txt
output/params/mobilenet_v2/features_11_conv_1_0/: weight_384_9.txt
output/params/mobilenet_v2/features_11_conv_2/: weight_96_384.txt
output/params/mobilenet_v2/features_12_conv_0_0/: weight_576_96.txt
output/params/mobilenet_v2/features_12_conv_1_0/: weight_576_9.txt
output/params/mobilenet_v2/features_12_conv_2/: weight_96_576.txt
output/params/mobilenet_v2/features_13_conv_0_0/: weight_576_96.txt
output/params/mobilenet_v2/features_13_conv_1_0/: weight_576_9.txt
(+40 files in other folders)
